--- a/package.json
+++ b/package.json
@@ -21,5 +21,15 @@
   "homepage": "https://github.com/ivan-solonchenko/Solonchenko-front-end-pro-12.03.23#readme",
   "devDependencies": {
     "jest": "^29.5.0"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   }
 }
